--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,16 +3,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>IsraniCUE Privacy Policy</title>
+  <title> Privacy Policy</title>
 </head>
 <body>
   <h1>Privacy Policy</h1>
   <p>Last updated: 12/21/23</p>
-  <p>IsraniCUE ("we" or "us") is committed to protecting your privacy. This Privacy Policy outlines the information we may collect from you when you use the IsraniCUE app ("the App") and how we use and disclose that information.</p>
+  <p>Krish Israni ("we" or "us") is committed to protecting your privacy. This Privacy Policy outlines the information we may collect from you when you use the IsraniCUE app ("the App") and how we use and disclose that information.</p>
   <h2>Information Collection and Usage</h2>
-  <p>The IsraniCUE app does not collect any personal data, make any data purchases, or perform any data-related actions. It runs standalone on your device and does not require or request any information from users.</p>
+  <p>The app does not collect any personal data, make any data purchases, or perform any data-related actions. It runs standalone on your device and does not require or request any information from users.</p>
   <h2>Third-Party Services</h2>
-  <p>The IsraniCUE app does not integrate with or use any third-party services, websites, or applications that may collect or process user data.</p>
+  <p>The app does not integrate with or use any third-party services, websites, or applications that may collect or process user data.</p>
   <h2>Contact</h2>
   <p>If you have any questions or concerns regarding this Privacy Policy or the IsraniCUE app, you can contact the maker, Krish Israni</p>
   <h2>Changes to this Privacy Policy</h2>
